# reka-cli

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
reka/: client.py  config.py  main.py  output.py
reka/commands/: _common.py  clip.py  configure.py  generations.py  groups.py  images.py  meta.py  qa.py  search.py  streams.py  tag.py  videos.py
reka/tests/: test_client.py  test_config.py  test_output.py
reka/tests/commands/: test_clip.py  test_generations.py  test_groups.py  test_images.py  test_meta.py  test_qa.py  test_search.py  test_streams.py  test_tag.py  test_videos.py
