# ABOUTME: Package configuration and dependency definitions for reka-cli
# ABOUTME: Defines entry points, test configuration, and build settings

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reka-cli"
version = "0.1.0"
description = "Command-line interface for the Reka Vision Agent API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pyinstaller>=6",
]

[project.scripts]
reka = "reka.main:app"

[tool.hatch.build.targets.wheel]
packages = ["reka"]

[tool.pytest.ini_options]
testpaths = ["reka/tests"]
markers = [
    "integration: marks tests as integration tests (require REKA_API_TOKEN)",
]
